@@ -76,7 +76,7 @@ module Padrino
         def update_attributes(params=nil)
           case orm
             when :activerecord, :mongomapper, :mongoid, :couchrest then "#{name_singular}.update_attributes(#{params})"
-            when :datamapper then "#{name_singular}.update(#{params})"
+            when :datamapper, :sequel then "#{name_singular}.update(#{params})"
             else raise OrmError, "Adapter #{orm} is not yet supported!"
           end
         end
