@@ -26,7 +26,7 @@ class TestAdminAppGenerator < Test::Unit::TestCase
     end
 
     should 'fail if we don\'t a valid orm' do
-      assert_nothing_raised { silence_logger { @project.start(['sample_project', '--root=/tmp', '-d=sequel']) } }
+      assert_nothing_raised { silence_logger { @project.start(['sample_project', '--root=/tmp', '-d=unknown']) } }
       assert_raise(SystemExit) { silence_logger { @admin.start(['-r=/tmp/sample_project']) } }
     end
 
