@@ -1,6 +1,7 @@
 if defined?(Sequel)
   namespace :sq do
     namespace :migrate do
+      task :default => :auto
       desc "Perform automigration (reset your db data)"
       task :auto => :environment do
         ::Sequel.extension :migration
@@ -10,12 +11,12 @@ if defined?(Sequel)
       end
 
       desc "Perform migration up/down to VERSION"
-      task :to, :version, :needs => :environment do
+      task :to, :version, :needs => :environment do |t, args|
         version = (args[:version] || ENV['VERSION']).to_s.strip
         ::Sequel.extension :migration
         raise "No VERSION was provided" if version.empty?
         ::Sequel::Migrator.apply(DB, "db/migrate", version.to_i)
-        puts "<= sq:migrate:to #{version} executed"
+        puts "<= sq:migrate:to[#{version}] executed"
       end
 
       desc "Perform migration up to latest migration available"
@@ -23,6 +24,13 @@ if defined?(Sequel)
         ::Sequel.extension :migration
         ::Sequel::Migrator.run DB, "db/migrate"
         puts "<= sq:migrate:up executed"
+      end
+
+      desc "Perform migration down (erase all data)"
+      task :down => :environment do
+        ::Sequel.extension :migration
+        ::Sequel::Migrator.run DB, "db/migrate", :target => 0
+        puts "<= sq:migrate:down executed"
       end
     end
   end
